--- a/lab.html
+++ b/lab.html
@@ -5,13 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bifrost Card Effects Lab</title>
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=JetBrains+Mono:wght@400;600&family=Space+Grotesk:wght@400;500;600&display=swap');
 *{margin:0;padding:0;box-sizing:border-box}
-body{background:#0a0a12;color:#eee;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;min-height:100vh;display:flex;flex-direction:column;align-items:center;padding:2rem}
-.lab-header{text-align:center;margin-bottom:2rem}
-.lab-header h1{font-size:1.8rem;background:linear-gradient(135deg,#54a0ff,#00ff88,#e94560);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;margin-bottom:0.5rem}
-.lab-header .subtitle{color:#888;font-size:0.9rem}
-.lab-header .alias{color:#54a0ff;font-family:monospace}
-.lab-header .pack-status{color:#555;font-size:0.75rem;font-family:monospace;margin-top:0.5rem}
+body{background:#0a0a12;color:#eee;font-family:'Space Grotesk',sans-serif;min-height:100vh;display:flex;flex-direction:column;align-items:center}
+.lab-header{text-align:center;padding:2rem 2rem 1.2rem;background:linear-gradient(135deg,#1a1a2e 0%,#16213e 50%,#0f3460 100%);border-bottom:1px solid #333;margin-bottom:2rem;width:100%}
+.lab-header h1{font-family:'Cinzel Decorative',serif;font-size:2rem;margin-bottom:0.25rem}
+.lab-header h1 .emoji{-webkit-text-fill-color:initial}
+.lab-header h1 .brand{background:linear-gradient(90deg,#ff6b6b,#feca57,#48dbfb,#ff9ff3,#54a0ff,#5f27cd);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text}
+.lab-header .tagline{color:#666;font-size:0.72rem;margin-bottom:0.5rem;line-height:1.4}
+.lab-header .subtitle{color:#888;font-size:0.85rem}
+.lab-header .alias{color:#54a0ff;font-family:'JetBrains Mono',monospace}
+.lab-header .pack-status{color:#555;font-size:0.75rem;font-family:'JetBrains Mono',monospace;margin-top:0.5rem}
 .lab-content{display:flex;gap:2rem;max-width:1100px;width:100%}
 .preview-panel{flex-shrink:0;display:flex;flex-direction:column;align-items:center;gap:1rem;position:sticky;top:2rem;align-self:flex-start}
 .controls-panel{flex:1;min-width:0}
@@ -42,7 +46,7 @@ body{background:#0a0a12;color:#eee;font-family:-apple-system,BlinkMacSystemFont,
   clip-path:polygon(0% 0%,100% 0%,100% 100%,0% 100%,0% 0%,var(--frame-padding) var(--frame-padding),var(--frame-padding) calc(var(--frame-padding) + var(--window-h)),calc(100% - var(--frame-padding)) calc(var(--frame-padding) + var(--window-h)),calc(100% - var(--frame-padding)) var(--frame-padding),var(--frame-padding) var(--frame-padding))}
 .bf-art-window-border{position:absolute;top:var(--frame-padding);left:var(--frame-padding);right:var(--frame-padding);height:var(--window-h);border:1px solid var(--frame-accent);pointer-events:none;z-index:4}
 .bf-gloss-overlay{position:absolute;inset:0;border-radius:var(--card-radius);pointer-events:none;z-index:5;opacity:0;transition:opacity 0.3s ease;background:radial-gradient(circle at var(--glossX) var(--glossY),rgba(255,255,255,0.2) 0%,rgba(255,255,255,0.08) 25%,transparent 50%)}
-.bf-badge:hover .bf-gloss-overlay{opacity:1}
+.bf-badge.has-gloss:hover .bf-gloss-overlay{opacity:1}
 .bf-text-zone{position:absolute;bottom:0;left:0;right:0;padding:8px var(--frame-padding) var(--frame-padding);text-align:center;z-index:6}
 .bf-badge-name{font-size:0.95rem;font-weight:600;color:#eee;line-height:1.2}
 .bf-badge-alias{font-size:0.75rem;color:#888;margin-top:2px;font-family:monospace}
@@ -94,15 +98,16 @@ body{background:#0a0a12;color:#eee;font-family:-apple-system,BlinkMacSystemFont,
 <body>
 
 <div class="lab-header">
-  <h1>Bifrost Card Effects Lab</h1>
+  <h1><span class="emoji">🌌</span> <span class="brand">BIFROST</span></h1>
+  <div class="tagline">Phonetool port of the standalone Card Architecture Blueprint — Modular Effects Lab<br>from <span class="alias">@xburton</span>'s open source arcade software</div>
   <div class="subtitle" id="subtitle">Loading...</div>
   <div class="pack-status" id="packStatus"></div>
 </div>
 
-<div class="lab-content">
+<div class="lab-content" style="padding:0 2rem">
   <div class="preview-panel">
     <div class="preview-boundary" id="previewBoundary">
-      <div class="bf-badge" id="previewCard">
+      <div class="bf-badge has-gloss" id="previewCard">
         <div class="bf-badge-sizer"></div>
         <div class="bf-layer-bottom" id="layerBottom">
           <div class="bf-art-placeholder" id="artPlaceholder">🧑</div>
@@ -149,7 +154,7 @@ body{background:#0a0a12;color:#eee;font-family:-apple-system,BlinkMacSystemFont,
 const LAB_CONFIG = {
   ROOT: 'REPLACE_WITH_YOUR_DRIVE_URL',
   MANIFEST: 'REPLACE_WITH_YOUR_DRIVE_URL/pack_manifest.json',
-  BROADCAST_CHANNEL: 'bifrost-badge-channel'
+  BROADCAST_CHANNEL: 'bifrost-badge-channel' // legacy, now uses postMessage
 };
 </script>
 
